plang/testing/logs/false-incorrect/101/program101.p.p
sLU (uYx6 yQ (n WQw4z vb1 (dDp9k iZmJe N))).


u (J).

kaY7N zoJcX (tl (X) o5bZH yPU7w (cTi)).

g (r tT4) JVjd men :- (((tBJq (MNm), n7kTE (a (JW89) (lo6t eN0r (WfDS) C17) (q0M6 (Q) uC Jd) lI) (sgR Psbjj) u xUbl))); ((((w vtWu LYOg (W))))).
uQ2 (Df).


tp765 :- (ce, lr a (R) IHJ6 (w6), pxc BfWYd (tAzE V2lm), n UHYZk; (c9oGl QIWt JdT kbX), sv6Sn; aS8dz z u NUDfu q9nfD, eg em; pvex (T4) zIZ Pqj ET; ec; zw).

ve qK7yU g (Wn8) Ds :- nuv; k; nF (ty CLm4 gYH tAKCT (MVyl)) Kiq (iggNl (eGhP vBJ)); cyU d HXjoS X; bL9HN; ((tTt (mZWvT T3z6g) moCW); aT (IWML) (ole) (obO (Pzhwd) QN) (os1Cl VDz U1 fE2U8 (sk4 (rDLJ bjvR Mvg23 (Lq) (H2vg)) cOc WS))); ((uAR13, z)).
sU :- cH (RI8) (r1D Jh8c YT), hj ExUOr; ur nbB (PtS) (dNJ3 (kG (oiBV eGsxY TuFWe) (tjWt1 (MVJ) (Hw2)) (taWxC (sAoi (gjR vXdq (akH WdO (U))))) (GT62)) (fonp) (sF D4K (bDrE (voV tBH) K5AY pOe)) dEv) (h q D (Yz94)); (zsZ PoM E GLO (lOqG5 (FqaoW) jbV8f hwJO)); hJu Hu, dIg9A, ((bmp (DpJo) (KVxtp) zf3)).
n Q YxUkO oATra.
k0 EoWq J2 (IAFw) Z.
h Wk (fR7pr (B4Xru) aNMz wgq) (c u9r G3Hm).


w.


i7q (OJ) cj.
od7I Qa6 m HPBu :- (x4 (ONo) R BlV5i rwG, hRC8W jylp3 (exrYn (EPV) (oBXeG (Ilzrn))) (eA n)); ((b2ab uB6 (Hl0) (wH (vMU zWYxw (t (i1FNN (EiJe)) (H))) (kBKwk (AtT) (pcw XlZqs) (Vq) (uR)) B9m x) q), oc Lk, aR (r5 (IJW1) (p f2HS9) (Luxbr) Nfg) (N) (vfYWY (UgCG) fzo)); z Bq (Yc) SsvO.


tI3mj (D).
q h (Ne) gmYj (s (iN (NHA0z) I (wgiVW k2i C dY))).
jnHFr H.

? o.


